crates/alder-parse/src/snapshots/alder_parse__style__tests__style_media_nested.snap
---
source: crates/alder-parse/src/style.rs
description: "style { \"@media (max-width: 600px)\": { padding: 8px } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 56,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 36,
                            },
                        },
                        value: Str(
                            "@media (max-width: 600px)",
                        ),
                    },
                    value: Nested(
                        Style {
                            entries: [
                                StyleEntry {
                                    key: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 40,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 47,
                                            },
                                        },
                                        value: Ident(
                                            "padding",
                                        ),
                                    },
                                    value: Dimension {
                                        number: NumberLit {
                                            value: 8.0,
                                            text: "8",
                                        },
                                        unit: "px",
                                    },
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ),
}
