crates/alder-parse/src/snapshots/alder_parse__style__tests__style_negative_float_dimension.snap
---
source: crates/alder-parse/src/style.rs
description: "style { margin: -0.5rem }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 26,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: Ident(
                            "margin",
                        ),
                    },
                    value: Dimension {
                        number: NumberLit {
                            value: -0.5,
                            text: "-0.5",
                        },
                        unit: "rem",
                    },
                },
            ],
        },
    ),
}
