crates/alder-parse/src/snapshots/alder_parse__style__tests__style_newline_before_brace.snap
---
source: crates/alder-parse/src/style.rs
description: "style\n{ padding: 16px }\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 18,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 3,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Ident(
                            "padding",
                        ),
                    },
                    value: Dimension {
                        number: NumberLit {
                            value: 16.0,
                            text: "16",
                        },
                        unit: "px",
                    },
                },
            ],
        },
    ),
}
