crates/alder-parse/src/snapshots/alder_parse__style__tests__style_newline_separated_nested.snap
---
source: crates/alder-parse/src/style.rs
description: "style {\n    \":hover\": { color: red }\n    \"@media (max-width: 600px)\": { padding: 8px }\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 13,
                            },
                        },
                        value: Str(
                            ":hover",
                        ),
                    },
                    value: Nested(
                        Style {
                            entries: [
                                StyleEntry {
                                    key: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 17,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 22,
                                            },
                                        },
                                        value: Ident(
                                            "color",
                                        ),
                                    },
                                    value: Expr(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 24,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 27,
                                                },
                                            },
                                            value: Var(
                                                "red",
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 32,
                            },
                        },
                        value: Str(
                            "@media (max-width: 600px)",
                        ),
                    },
                    value: Nested(
                        Style {
                            entries: [
                                StyleEntry {
                                    key: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 36,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 43,
                                            },
                                        },
                                        value: Ident(
                                            "padding",
                                        ),
                                    },
                                    value: Dimension {
                                        number: NumberLit {
                                            value: 8.0,
                                            text: "8",
                                        },
                                        unit: "px",
                                    },
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ),
}
